<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nav_menu"
    tools:context="com.epiandroid.epitech.epiandroid.viewlist">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profile_picture"
            android:gravity="end"
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:contentDescription="@string/profile_picture" />

        <Space
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:text="@string/profile_login"
            android:textSize="20sp" />


        <Space
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:text="@string/profile_name"
            android:textSize="20sp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/promotion_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:text="@string/profile_promotion"
            android:textSize="20sp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/log_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:text="@string/profile_log_time"
            android:textSize="20sp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/button_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile_show_messages" />
    </LinearLayout>

    <ListView android:id="@+id/left_nav"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@color/list_divider"
        android:dividerHeight="1dp"
        android:background="@color/counter_text_color" />

</android.support.v4.widget.DrawerLayout>