<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:padding="16dp"
    android:id="@+id/nav_menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0">


        <EditText
            android:id="@+id/edit_login"
            android:layout_width="0dp"
            android:hint="@string/login"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/password"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:id="@+id/logo"
        android:layout_row="2"
        android:layout_column="0">

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_login" />

    </LinearLayout>

    <Space
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_row="3"
        android:layout_column="0" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:contentDescription="@string/app_name"
        android:layout_row="5"
        android:layout_column="0"
        android:src="@drawable/logo"
        android:gravity="center"
        android:cropToPadding="false" />

</GridLayout>
